// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkiaChart Chart fire PanResponder tap & drag & pinch event correctly 5`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <View
    pointerEvents="auto"
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
  >
    <skRect
      color="transparent"
      height={250}
      width={430}
      x={0}
      y={0}
    />
    <skPath
      color="#86878c"
      end={1}
      opacity={0.5}
      path="[SkPath]"
      start={0}
      strokeWidth={6.006150297905054}
      style="stroke"
      transform={
        [
          {
            "matrix": [
              0.8324800000000001,
              0,
              0,
              -239.71400000000006,
              0,
              0.8324800000000001,
              0,
              -124.74400000000003,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="#86878c"
      end={1}
      opacity={0.5}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              -0.3282630677495771,
              0.9445863424545354,
              0,
              37.335111541748006,
              -0.9445863424545354,
              -0.3282630677495771,
              0,
              114.79443541050364,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="#86878c"
      end={1}
      opacity={0.5}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              -0.32826301374220823,
              -0.9445863612231985,
              0,
              398.9648551170043,
              0.9445863612231985,
              -0.32826301374220823,
              0,
              114.79442382373944,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="green"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              29.150000000000002,
              0,
              0,
              10.029999999999973,
              0,
              29.150000000000002,
              0,
              125,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="blue"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              29.150000000000002,
              0,
              0,
              426.27,
              0,
              29.150000000000002,
              0,
              125,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skParagraph
      fill="#eee"
      paint-order="stroke"
      paragraph="[SkParagraph]"
      stroke="green"
      stroke-miterlimit={2}
      stroke-width={2}
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              10.029999999999973,
              0,
              1,
              0,
              125,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={8}
      x={-3.9420242309570312}
      y={-6}
    />
    <skParagraph
      fill="#ccc"
      paint-order="stroke"
      paragraph="[SkParagraph]"
      stroke="blue"
      stroke-miterlimit={2}
      stroke-width={2}
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              426.27,
              0,
              1,
              0,
              125,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={8}
      x={-3.9420242309570312}
      y={-6}
    />
    <skParagraph
      fill="#333"
      fill-opacity={0.5}
      opacity={0.5}
      paint-order="stroke"
      paragraph="[SkParagraph]"
      stroke="rgb(255,255,255)"
      stroke-miterlimit={2}
      stroke-opacity={0.5}
      stroke-width={2}
      transform={
        [
          {
            "matrix": [
              0.9999999999999994,
              3.204040711552069e-8,
              0,
              218.14998313693667,
              -3.204040711552069e-8,
              0.9999999999999994,
              0,
              77.36984970209522,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={50}
      x={-24.919967651367188}
      y={-20}
    />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SkiaChart Chart fire RNGH tap & drag & pinch event correctly 5`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
    testID="component"
  >
    <View
      pointerEvents="auto"
      style={
        {
          "height": 250,
          "width": 430,
        }
      }
    >
      <skRect
        color="transparent"
        height={250}
        width={430}
        x={0}
        y={0}
      />
      <skPath
        color="#86878c"
        end={1}
        opacity={0.5}
        path="[SkPath]"
        start={0}
        strokeWidth={6.056201550387597}
        style="stroke"
        transform={
          [
            {
              "matrix": [
                0.8255999999999999,
                0,
                0,
                -236.07999999999996,
                0,
                0.8255999999999999,
                0,
                -122.67999999999998,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
      />
      <skPath
        color="#86878c"
        end={1}
        opacity={0.5}
        path="[SkPath]"
        start={0}
        style="fill"
        transform={
          [
            {
              "matrix": [
                -0.32657760007172393,
                0.9451703926443069,
                0,
                39.71041015624999,
                -0.9451703926443069,
                -0.32657760007172393,
                0,
                114.52152892117499,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
      />
      <skPath
        color="#86878c"
        end={1}
        opacity={0.5}
        path="[SkPath]"
        start={0}
        style="fill"
        transform={
          [
            {
              "matrix": [
                -0.32657745639917624,
                -0.9451704422863867,
                0,
                396.2895020440293,
                0.9451704422863867,
                -0.32657745639917624,
                0,
                114.52149858440694,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
      />
      <skPath
        color="blue"
        end={1}
        opacity={1}
        path="[SkPath]"
        start={0}
        style="fill"
        transform={
          [
            {
              "matrix": [
                30,
                0,
                0,
                424.4,
                0,
                30,
                0,
                125,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
      />
      <skParagraph
        fill="#ccc"
        paint-order="stroke"
        paragraph="[SkParagraph]"
        stroke="blue"
        stroke-miterlimit={2}
        stroke-width={2}
        transform={
          [
            {
              "matrix": [
                1,
                0,
                0,
                424.4,
                0,
                1,
                0,
                125,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
        width={8}
        x={-3.9420242309570312}
        y={-6}
      />
      <skParagraph
        fill="#333"
        fill-opacity={0.5}
        opacity={0.5}
        paint-order="stroke"
        paragraph="[SkParagraph]"
        stroke="rgb(255,255,255)"
        stroke-miterlimit={2}
        stroke-opacity={0.5}
        stroke-width={2}
        transform={
          [
            {
              "matrix": [
                0.9999999999999963,
                8.507724862798222e-8,
                0,
                217.99995558489465,
                -8.507724862798222e-8,
                0.9999999999999963,
                0,
                77.66379844961429,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
        width={50}
        x={-24.919967651367188}
        y={-20}
      />
      <skPath
        color="rgb(0,140,0)"
        end={1}
        opacity={1}
        path="[SkPath]"
        start={0}
        style="fill"
        transform={
          [
            {
              "matrix": [
                60,
                0,
                0,
                11.600000000000023,
                0,
                60,
                0,
                125,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
      />
      <skParagraph
        fill="#eee"
        paint-order="stroke"
        paragraph="[SkParagraph]"
        stroke="rgb(0,140,0)"
        stroke-miterlimit={2}
        stroke-width={2}
        transform={
          [
            {
              "matrix": [
                1,
                0,
                0,
                11.600000000000023,
                0,
                1,
                0,
                125,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                1,
              ],
            },
          ]
        }
        width={8}
        x={-3.9420242309570312}
        y={-6}
      />
    </View>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(0,0,0,0)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
      testID="gesture-handler"
    />
  </View>
</View>
`;

exports[`SkiaChart Chart fire dispatchEventsToZRender correctly 3`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <View
    pointerEvents="auto"
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
  >
    <skRect
      color="transparent"
      height={250}
      width={430}
      x={0}
      y={0}
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#54555a"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeCap="round"
      strokeWidth={1}
      style="stroke"
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              170,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={8}
      x={-7.8840484619140625}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              143.75,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={16}
      x={-15.768096923828125}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              117.5,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              91.25,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              145.125,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={27}
      x={-13.128082275390625}
      y={0}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              306.375,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={23}
      x={-11.130073547363281}
      y={0}
    />
    <skPath
      color="orange"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
    />
    <skPath
      color="black"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
    />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SkiaChart Chart renders correctly 2`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <View
    pointerEvents="auto"
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
  >
    <skRect
      color="transparent"
      height={250}
      width={430}
      x={0}
      y={0}
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#54555a"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeCap="round"
      strokeWidth={1}
      style="stroke"
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              170,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={8}
      x={-7.8840484619140625}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              143.75,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={16}
      x={-15.768096923828125}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              117.5,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              91.25,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              145.125,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={27}
      x={-13.128082275390625}
      y={0}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              306.375,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={23}
      x={-11.130073547363281}
      y={0}
    />
    <skGroup
      clip="[SkClip]"
    >
      <skPath
        color="orange"
        end={1}
        opacity={1}
        path="[SkPath]"
        start={0}
        strokeJoin="bevel"
        strokeWidth={2}
        style="stroke"
      />
    </skGroup>
    <skPath
      color="#fff"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              3,
              0,
              0,
              145.125,
              0,
              3,
              0,
              107,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="orange"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={0.6666666666666666}
      style="stroke"
      transform={
        [
          {
            "matrix": [
              3,
              0,
              0,
              145.125,
              0,
              3,
              0,
              107,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="#fff"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              3,
              0,
              0,
              306.375,
              0,
              3,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="orange"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={0.6666666666666666}
      style="stroke"
      transform={
        [
          {
            "matrix": [
              3,
              0,
              0,
              306.375,
              0,
              3,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
  </View>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SkiaChart Chart renders correctly when handleGesture false 2`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <View
    pointerEvents="auto"
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
  >
    <skRect
      color="transparent"
      height={250}
      width={430}
      x={0}
      y={0}
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#dbdee4"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeWidth={1}
      style="stroke"
    />
    <skPath
      color="#54555a"
      end={1}
      opacity={1}
      path="[SkPath]"
      start={0}
      strokeCap="round"
      strokeWidth={1}
      style="stroke"
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              170,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={8}
      x={-7.8840484619140625}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              143.75,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={16}
      x={-15.768096923828125}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.5,
              2.4492935982947064e-16,
              1,
              0,
              117.5,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              91.25,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              -4.66973964754502e-16,
              0,
              56.50000000000001,
              2.4492935982947064e-16,
              1,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={24}
      x={-23.652145385742188}
      y={-6}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              145.125,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={27}
      x={-13.128082275390625}
      y={0}
    />
    <skParagraph
      fill="#54555a"
      paragraph="[SkParagraph]"
      transform={
        [
          {
            "matrix": [
              1,
              0,
              0,
              306.375,
              0,
              1,
              0,
              178,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
      width={23}
      x={-11.130073547363281}
      y={0}
    />
    <skPath
      color="orange"
      end={1}
      opacity={0.8}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              5,
              0,
              0,
              145.125,
              0,
              5,
              0,
              107,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
    <skPath
      color="orange"
      end={1}
      opacity={0.8}
      path="[SkPath]"
      start={0}
      style="fill"
      transform={
        [
          {
            "matrix": [
              5,
              0,
              0,
              306.375,
              0,
              5,
              0,
              65,
              0,
              0,
              1,
              0,
              0,
              0,
              0,
              1,
            ],
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`SvgChart Chart fire PanResponder tap & drag & pinch event correctly 5`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <RNSVGSvgView
    bbHeight={250}
    bbWidth={430}
    focusable={false}
    height={250}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 250,
          "width": 430,
        },
      ]
    }
    width={430}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        fill={null}
        height={250}
        propList={
          [
            "fill",
          ]
        }
        width={430}
        x="0"
        y="0"
      />
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M332.7997 287.7408Q550 212.2592 767.2002 287.7408"
          fill={null}
          matrix={
            [
              0.832,
              0,
              0,
              0.832,
              -239.714,
              -124.744,
            ]
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
            ]
          }
          stroke={
            {
              "payload": 4287006604,
              "type": 0,
            }
          }
          strokeOpacity={0.5}
          strokeWidth={6.006150297905054}
        />
        <RNSVGPath
          d="M2.5 0A2.5 2.5 0 1 1 2.5 -0.0002"
          fill={
            {
              "payload": 4287006604,
              "type": 0,
            }
          }
          fillOpacity={0.5}
          matrix={
            [
              -0.328,
              -0.945,
              0.945,
              -0.328,
              37.3351,
              114.7944,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
        />
        <RNSVGPath
          d="M0 0L13.3333 20L0 15L-13.3333 20L0 0Z"
          fill={
            {
              "payload": 4287006604,
              "type": 0,
            }
          }
          fillOpacity={0.5}
          matrix={
            [
              -0.328,
              0.945,
              -0.945,
              -0.328,
              398.9649,
              114.7944,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
        />
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4278222848,
              "type": 0,
            }
          }
          matrix={
            [
              29.15,
              0,
              0,
              29.15,
              10.03,
              125,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4278190335,
              "type": 0,
            }
          }
          matrix={
            [
              29.15,
              0,
              0,
              29.15,
              426.27,
              125,
            ]
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4293848814,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              10.03,
              125,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
              "stroke",
              "strokeWidth",
              "strokeMiterlimit",
            ]
          }
          rotate={[]}
          stroke={
            {
              "payload": 4278222848,
              "type": 0,
            }
          }
          strokeMiterlimit={2}
          strokeWidth={0}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="1"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4291611852,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              426.27,
              125,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
              "stroke",
              "strokeWidth",
              "strokeMiterlimit",
            ]
          }
          rotate={[]}
          stroke={
            {
              "payload": 4278190335,
              "type": 0,
            }
          }
          strokeMiterlimit={2}
          strokeWidth={0}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="2"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4281545523,
              "type": 0,
            }
          }
          fillOpacity={0.5}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "20px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              218.15,
              77.3698,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
              "stroke",
              "strokeWidth",
              "strokeOpacity",
              "strokeMiterlimit",
            ]
          }
          rotate={[]}
          stroke={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          strokeMiterlimit={2}
          strokeOpacity={0.5}
          strokeWidth={0}
          x={[]}
          y={
            [
              -10,
            ]
          }
        >
          <RNSVGTSpan
            content="0 > 1"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SvgChart Chart fire RNGH tap & drag & pinch event correctly 5`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "height": 250,
        "width": 430,
      }
    }
    testID="component"
  >
    <RNSVGSvgView
      bbHeight={250}
      bbWidth={430}
      focusable={false}
      height={250}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 250,
            "width": 430,
          },
        ]
      }
      width={430}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGRect
          fill={null}
          height={250}
          propList={
            [
              "fill",
            ]
          }
          width={430}
          x="0"
          y="0"
        />
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M334.0485 287.3081Q549.9999 212.692 765.9514 287.308"
            fill={null}
            matrix={
              [
                0.826,
                0,
                0,
                0.826,
                -236.08,
                -122.68,
              ]
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeOpacity",
              ]
            }
            stroke={
              {
                "payload": 4287006604,
                "type": 0,
              }
            }
            strokeOpacity={0.5}
            strokeWidth={6.056201550387597}
          />
          <RNSVGPath
            d="M2.5 0A2.5 2.5 0 1 1 2.5 -0.0002"
            fill={
              {
                "payload": 4287006604,
                "type": 0,
              }
            }
            fillOpacity={0.5}
            matrix={
              [
                -0.327,
                -0.945,
                0.945,
                -0.327,
                39.7104,
                114.5215,
              ]
            }
            propList={
              [
                "fill",
                "fillOpacity",
              ]
            }
          />
          <RNSVGPath
            d="M0 0L13.3333 20L0 15L-13.3333 20L0 0Z"
            fill={
              {
                "payload": 4287006604,
                "type": 0,
              }
            }
            fillOpacity={0.5}
            matrix={
              [
                -0.327,
                0.945,
                -0.945,
                -0.327,
                396.2895,
                114.5215,
              ]
            }
            propList={
              [
                "fill",
                "fillOpacity",
              ]
            }
          />
          <RNSVGPath
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill={
              {
                "payload": 4278190335,
                "type": 0,
              }
            }
            matrix={
              [
                30,
                0,
                0,
                30,
                424.4,
                125,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="middle"
            content={null}
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4291611852,
                "type": 0,
              }
            }
            fillOpacity={1}
            font={
              {
                "fontFamily": "Helvetica Neue",
                "fontSize": "12px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                424.4,
                125,
              ]
            }
            propList={
              [
                "fill",
                "fillOpacity",
                "stroke",
                "strokeWidth",
                "strokeMiterlimit",
              ]
            }
            rotate={[]}
            stroke={
              {
                "payload": 4278190335,
                "type": 0,
              }
            }
            strokeMiterlimit={2}
            strokeWidth={0}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="2"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGText
            alignmentBaseline="middle"
            content={null}
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4281545523,
                "type": 0,
              }
            }
            fillOpacity={0.5}
            font={
              {
                "fontFamily": "Helvetica Neue",
                "fontSize": "20px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                218,
                77.6638,
              ]
            }
            propList={
              [
                "fill",
                "fillOpacity",
                "stroke",
                "strokeWidth",
                "strokeOpacity",
                "strokeMiterlimit",
              ]
            }
            rotate={[]}
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeMiterlimit={2}
            strokeOpacity={0.5}
            strokeWidth={0}
            x={[]}
            y={
              [
                -10,
              ]
            }
          >
            <RNSVGTSpan
              content="0 > 1"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
          <RNSVGPath
            d="M1 0A1 1 0 1 1 1 -0.0001"
            fill={
              {
                "payload": 4278225920,
                "type": 0,
              }
            }
            matrix={
              [
                60,
                0,
                0,
                60,
                11.6,
                125,
              ]
            }
            propList={
              [
                "fill",
              ]
            }
          />
          <RNSVGText
            alignmentBaseline="middle"
            content={null}
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4293848814,
                "type": 0,
              }
            }
            fillOpacity={1}
            font={
              {
                "fontFamily": "Helvetica Neue",
                "fontSize": "12px",
                "textAnchor": "middle",
              }
            }
            matrix={
              [
                1,
                0,
                0,
                1,
                11.6,
                125,
              ]
            }
            propList={
              [
                "fill",
                "fillOpacity",
                "stroke",
                "strokeWidth",
                "strokeMiterlimit",
              ]
            }
            rotate={[]}
            stroke={
              {
                "payload": 4278225920,
                "type": 0,
              }
            }
            strokeMiterlimit={2}
            strokeWidth={0}
            x={[]}
            y={[]}
          >
            <RNSVGTSpan
              content="1"
              dx={[]}
              dy={[]}
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              font={{}}
              rotate={[]}
              x={[]}
              y={[]}
            />
          </RNSVGText>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGSvgView>
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "rgba(0,0,0,0)",
          "height": "100%",
          "position": "absolute",
          "width": "100%",
        }
      }
      testID="gesture-handler"
    />
  </View>
</View>
`;

exports[`SvgChart Chart fire dispatchEventsToZRender correctly 3`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <RNSVGSvgView
    bbHeight={250}
    bbWidth={430}
    focusable={false}
    height={250}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 250,
          "width": 430,
        },
      ]
    }
    width={430}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        fill={null}
        height={250}
        propList={
          [
            "fill",
          ]
        }
        width={430}
        x="0"
        y="0"
      />
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 144.5L387 144.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 117.5L387 117.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 91.5L387 91.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 65.5L387 65.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          strokeLinecap={1}
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              170,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="0"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              143.75,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="50"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              117.5,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="100"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              91.25,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="150"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              65,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="200"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              145.125,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Mon"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              306.375,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Tue"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M250.7438 170l111.2625 0l0 -105l-111.2625 0Z"
          fill={
            {
              "payload": 4294944000,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M89.4937 170l111.2625 0l0 -63l-111.2625 0Z"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SvgChart Chart renders correctly 2`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <RNSVGSvgView
    bbHeight={250}
    bbWidth={430}
    focusable={false}
    height={250}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 250,
          "width": 430,
        },
      ]
    }
    width={430}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        fill={null}
        height={250}
        propList={
          [
            "fill",
          ]
        }
        width={430}
        x="0"
        y="0"
      />
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 144.5L387 144.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 117.5L387 117.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 91.5L387 91.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 65.5L387 65.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          strokeLinecap={1}
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              170,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="0"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              143.75,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="50"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              117.5,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="100"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              91.25,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="150"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              65,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="200"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              145.125,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Mon"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              306.375,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Tue"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGGroup
          clipPath="zr0-c0"
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGPath
            d="M145.125 107L306.375 65"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294944000,
                "type": 0,
              }
            }
            strokeLinejoin={2}
            strokeWidth={2}
          />
        </RNSVGGroup>
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          matrix={
            [
              3,
              0,
              0,
              3,
              145.125,
              107,
            ]
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={
            {
              "payload": 4294944000,
              "type": 0,
            }
          }
          strokeWidth={0.6666666666666666}
        />
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4294967295,
              "type": 0,
            }
          }
          matrix={
            [
              3,
              0,
              0,
              3,
              306.375,
              65,
            ]
          }
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
            ]
          }
          stroke={
            {
              "payload": 4294944000,
              "type": 0,
            }
          }
          strokeWidth={0.6666666666666666}
        />
      </RNSVGGroup>
      <RNSVGDefs>
        <RNSVGClipPath
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
          name="zr0-c0"
        >
          <RNSVGPath
            d="M63 64l326 0l0 107l-326 0Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGClipPath>
      </RNSVGDefs>
    </RNSVGGroup>
  </RNSVGSvgView>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0)",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
    testID="pan-responder-handler"
  />
</View>
`;

exports[`SvgChart Chart renders correctly when handleGesture false 2`] = `
<View
  style={
    {
      "height": 250,
      "width": 430,
    }
  }
  testID="component"
>
  <RNSVGSvgView
    bbHeight={250}
    bbWidth={430}
    focusable={false}
    height={250}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 250,
          "width": 430,
        },
      ]
    }
    width={430}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGRect
        fill={null}
        height={250}
        propList={
          [
            "fill",
          ]
        }
        width={430}
        x="0"
        y="0"
      />
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 144.5L387 144.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 117.5L387 117.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 91.5L387 91.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 65.5L387 65.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
            ]
          }
          stroke={
            {
              "payload": 4292599524,
              "type": 0,
            }
          }
        />
        <RNSVGPath
          d="M64.5 170.5L387 170.5"
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeLinecap",
            ]
          }
          stroke={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          strokeLinecap={1}
        />
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              170,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="0"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              143.75,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="50"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              117.5,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="100"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              91.25,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="150"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "end",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              56.5,
              65,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={[]}
        >
          <RNSVGTSpan
            content="200"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              145.125,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Mon"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGText
          alignmentBaseline="middle"
          content={null}
          dx={[]}
          dy={[]}
          fill={
            {
              "payload": 4283716954,
              "type": 0,
            }
          }
          fillOpacity={1}
          font={
            {
              "fontFamily": "Helvetica Neue",
              "fontSize": "12px",
              "textAnchor": "middle",
            }
          }
          matrix={
            [
              1,
              0,
              0,
              1,
              306.375,
              178,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
          rotate={[]}
          x={[]}
          y={
            [
              6,
            ]
          }
        >
          <RNSVGTSpan
            content="Tue"
            dx={[]}
            dy={[]}
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            font={{}}
            rotate={[]}
            x={[]}
            y={[]}
          />
        </RNSVGText>
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4294944000,
              "type": 0,
            }
          }
          fillOpacity={0.8}
          matrix={
            [
              5,
              0,
              0,
              5,
              145.125,
              107,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
        />
        <RNSVGPath
          d="M1 0A1 1 0 1 1 1 -0.0001"
          fill={
            {
              "payload": 4294944000,
              "type": 0,
            }
          }
          fillOpacity={0.8}
          matrix={
            [
              5,
              0,
              0,
              5,
              306.375,
              65,
            ]
          }
          propList={
            [
              "fill",
              "fillOpacity",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
